# Semagrams.jl

./: .envrc  .gitignore  .nojekyll  Cargo.toml  LICENSE  Manifest.toml  Project.toml  README.md  TODO.org  about.html  blank_dpg.json  docs.html  flake.nix  index.html  jasmine.json  package-lock.json  package.json  roadmap.html  robots.txt  search.json  sitemap.xml  test_pluto.jl  test_serialization.jl  tsconfig.json  webpack.config.js
_site/: index.html
assets/: app.bundle.js  structural_analysis.tm
css/: bootstrap.min.css
demos/: ACT2021.ipynb  MunichDemo.ipynb  Naamloos.ipynb  Naamloos1.ipynb
dev/: docs.html  index.html  roadmap.html  search.json  search_index.js  styles.css
docs/: make.jl
javascript/: TODO.org  flake.nix  package-lock.json  package.json  tsconfig.json  webpack.common.js  webpack.dev.js  webpack.prod.js  wired.tm
julia/: LICENSE  Project.toml  README.md  test_pluto.jl
next/: flake.nix  index.html  roadmap.html  search.json  test.md
notebooks/: DirectedPortGraphs.ipynb  LivePetri.ipynb  Manifest.toml  Project.toml  SemagramsTalkExamples.ipynb
page/: config.md  index.md  package-lock.json
scala/: .gitignore  .scalafmt.conf  PLAN.md  build.sbt  build.sc  build.sh  dwd.md  index-dev.html  index.html  issues.md  main.js  package-lock.json  package.json  play.worksheet.sc  scalablytyped.sc  semagrams_cheatsheet.md  server.py  vite.config.js
scaladoc/: index.html  semagrams.html  util.html
site/: _quarto.yml  docs.qmd  index.qmd  roadmap.qmd
spec/: Wired.spec.ts
src/: BoxNode.ts  Boxes.jl  Data.jl  Editor.ts  EditorState.ts  (+19 more)
(+1356 files in other folders)
