[package]
name = "wired"
version = "0.1.0"
authors = ["Owen Lynch <root@owenlynch.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.gtk]
version = "^0"
features = ["v3_24"]

[dependencies.gio]
version = "^0"
features = ["v2_56"]

[dependencies]
cairo-rs = "^0"
pango = "^0"
pangocairo = "^0"
